[package]
name = "wasmyon"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"
repository = "https://github.com/Ciantic/wasmyon"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4"
futures-channel-preview = "0.3.0-alpha.18"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
once_cell = "1.8"
js-sys = "0.3"
rayon = "1.5"
wasmyon-macro-support = { path = "macro-support" }

[dependencies.web-sys]
version = "*"
features = [
  'ErrorEvent',
  'Event',
  'Navigator',
  'Window',
  'Worker',
  'WorkerOptions',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
]
[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s" # Tell `rustc` to optimize for small code size.


[workspace]
members = [
    "examples/simple",
    "macro-support"
]