[package]
name = "wasmyon-macro-support"
description = "Provides macro support for the main wasmyon crate"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Ciantic/wasmyon"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"