[package]
name = "wasmyon-simple"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"
publish = false
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
crossbeam-channel = "*"
once_cell = "*"
js-sys = "*"
rayon = "*"
wasmyon = { path = "../../", features = ["serde", "serde-wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s" # Tell `rustc` to optimize for small code size.